# MDOODZ7.0

./: .clang-format  .gitignore  CMakeLists.txt  Deps.cmake  DepsVcpkg.cmake  FindSuiteSparse.cmake  FindSuiteSparse.cmake.orig  Manifest.toml  OPTIMIZATIONS.md  Pipfile  Plots.cmake  Project.toml  README.md  TestRun.txt  TestShrinking.txt  Tests.cmake  env.cmake  env.cmake.example  install.sh  makefile
GnuPlot/: CMakeLists.txt  StrainStressGIF.gnu  StrainStressGif  StrainStressGif.cpp  SurfaceEvolution  SurfaceEvolution.cpp  SurfaceEvolution.gnu
MDLIB/: .gitignore  AdvectionRoutines.c  AnisoHomoVEVP  AnisoVEVP  AnisoViscTest_evolv  AnisoViscTest_evolv.c  AnisotropyRoutines.c  BC.c  CMakeLists.txt  CheckBC.ipynb  ChemicalRoutines.c  CollisionAnisotropy.c  FD_Jacobian.c  FlowLaws.c  FreeSurface.c  GridRoutines.c  HDF5Output.c  InputOutput.c  InputOutput.h  Jacobian_01cpu_step01_iter00.gzip.h5  Jacobian_01cpu_step01_iter01.gzip.h5  Jacobian_01cpu_step01_iter02.gzip.h5  Jacobian_01cpu_step01_iter03.gzip.h5  Jacobian_01cpu_step01_iter04.gzip.h5  Jacobian_01cpu_step01_iter05.gzip.h5  Jacobian_01cpu_step01_iter06.gzip.h5  Jacobian_01cpu_step01_iter07.gzip.h5  Jacobian_01cpu_step01_iter08.gzip.h5  Main_DOODZ.c  MaxStressStrainRate.mat  MdoodzLog.c  MeltingRoutines.c  MemoryAllocFree.c  MiscFunctions.c  MultigridLevels.c  MultigridLevels.h  MultigridStokes.c  MultigridStokes.h  NeckingReview.c  Output00000.gzip.h5  (+70 more)
MDLIB/M001_loadingHom5000_DeltaRhoDeltaEta/: .Anais2Shrink_all.txt.swp
MDLIB/Makefiles/: makefile_Alambix  makefile_Fuchs  makefile_Lara_WSL  makefile_Physix  makefile_Pipo  makefile_Tib_M2
MDLIB/include/: mdoodz-log.h  mdoodz.h
MDLIB/istep/: Output00000.gzip.h5  Output00001.gzip.h5  Output00002.gzip.h5  Output00003.gzip.h5  Output00004.gzip.h5  Output00005.gzip.h5  Output00006.gzip.h5  Output00007.gzip.h5  Output00008.gzip.h5  Output00009.gzip.h5  Output00010.gzip.h5
MDLIB/old/: AnisotropyRoutines.c  FD_Jacobian.c  FlowLaws.c  InputOutput.c  RheologyDensity.c  RheologyParticles.c  SparseTools.c  StokesAssemblyDecoupled.c  StokesRoutines.c  setup.c
MDLIB/safe/: AdvectionRoutines.c  AnisotropyRoutines.c  FlowLaws.c  GridRoutines.c  InputOutput.c  MiscFunctions.c  ParticleRoutines.c  Routines_BEN.c
SETS/: AddSet.cmake  Anais.c  Anais.txt  Anais2Shrink.txt  Anais2Shrink_preload.c  Anais2Shrink_preload.txt  AnaisReference.c  AnaisReference.txt  AnaisReference_current.txt  AnaisReference_old.txt  AniFstrainCalciteBruijn.c  AniFstrainCalciteBruijn.txt  AniFstrainCalcitePieri.c  AniFstrainCalcitePieri.txt  AniFstrainCalciteSchuster.c  AniFstrainCalciteSchuster.txt  AniFstrainOlivineBoneh_InitFS.c  AniFstrainOlivineBoneh_InitFS.txt  AniFstrainQuartzBlackford.c  AniFstrainQuartzBlackford.txt  AniFstrainQuartzPennacchioni.c  AniFstrainQuartzPennacchioni.txt  AnisoFstrainBox.c  AnisoFstrainBox.txt  AnisoHomoVEVP.c  AnisoHomoVEVP.txt  AnisoVEVP.c  AnisoVEVP.txt  AnisoViscTest_Debug.c  AnisoViscTest_Debug.txt  AnisoViscTest_Ellipses.c  AnisoViscTest_Ellipses.txt  AnisoViscTest_HomoRandomAngle.c  AnisoViscTest_HomoRandomAngle.txt  AnisoViscTest_MWE.c  AnisoViscTest_MWE.txt  AnisoViscTest_evolv.c  AnisoViscTest_evolv.txt  AnisoViscTest_evolv_multi_circles.c  AnisoViscTest_evolv_multi_circles.txt  (+212 more)
SETS/AniFstrainCalciteBruijn/: README.md  mdoodz_vs_bruijn.py  run.sh
SETS/AniFstrainCalcitePieri/: README.md  mdoodz_vs_pieri.py  run.sh
SETS/AniFstrainCalciteSchuster/: README.md  mdoodz_vs_schuster.py  run.sh
SETS/AniFstrainQuartzBlackford/: README.md  mdoodz_vs_blackford.py  run.sh
SETS/AniFstrainQuartzPennacchioni/: README.md  mdoodz_vs_pennacchioni.py  run.sh
SETS/NeckinReviewSystematics/: NeckingReview_NR01.txt  NeckingReview_NR03.txt  NeckingReview_NR07.txt  NeckingReview_NR09.txt
SETS/ShearTemplateCI/: LinearPureshearAnisotropic.txt  LinearPureshearIsotropic.txt  LinearSimpleshearAnisotropic.txt  LinearSimpleshearIsotropic.txt  NonLinearPureshearAnisotropic.txt  NonLinearSimpleshearAnisotropi.txt  NonLinearSimpleshearIsotropic.txt
SETS/ThanushikaSubduction/: ThanushikaSubduction  ThanushikaSubduction.txt
TESTS/: AnalyticalSolutions.md  AnisotropyBenchmarkTests.cpp  BenchmarkExperiments.md  BlankenBenchTests.cpp  BoundaryConditionTests.cpp  CMakeLists.txt  CompressibilityTests.cpp  ConvergenceRateTests.cpp  DensityTests.cpp  FiniteStrainTests.cpp  FreeSurfaceTests.cpp  GmgStokesEquivalence.cpp  InitAnisoFromFiniteStrainTests.cpp  InterpEquivalenceTests.cpp  MultigridStokesTests.cpp  MultigridTests.cpp  NeumannBCTests.cpp  NewtonIterationConvergence.c  NewtonIterationConvergence.cpp  PlasticityTests.cpp  Popov2025Tests.cpp  README.md  RheologyCreepTests.cpp  RiftingChenin.txt  RotationAdvectionTests.cpp  Setup03_strongCircleAnisoConst.txt  ShearHeatingTests.cpp  ShearTemplate.txt  ShearTemplate_original.txt  ShearTemplate_test.c  Shear_pwl_test.c  SolCxBenchmarkTests.cpp  SolViBenchmarkTests.cpp  SolViMarkerComparison.cpp  SolverModeTests.cpp  StokesMatvecEquivalence.cpp  TestHelpers.h  ThermalTests.cpp  ThermalVerificationTests.cpp  TopoBenchTests.cpp  (+7 more)
TESTS/AnalyticalBench/: SolKz_chol.txt  SolKz_gmg.txt
TESTS/AnisotropyBenchmark/: AniFstrainEvolution.txt  DirectorEvolution.txt  DirectorEvolutionInterpMode1.txt  (+8 more)
VISUAL_TESTS/: CMakeLists.txt  ClosedBoxRunner.cpp  GSE.cpp  HDF5pp.h  InterpEquivalence.gnu  OceanicCooling.gnu  PCGConvergence.gnu  PCGConvergence.txt  PinchSwellGSE.txt  ReseedingGuide.cpp  ReseedingGuide.md  RiftingChenin.cpp  RiftingChenin.gnu  RiftingChenin.txt  RiftingCheninReference.h5  RiftingPauline.c  RiftingPauline.cpp  RiftingPauline.gnu  RiftingPaulineReference.gzip.h5  ShearHeatingDuretz14.cpp  ShearHeatingDuretz14.gnu  ShearHeatingDuretz14.txt  ShearHeatingDuretz14Reference.h5  ShearTemplate.c  ShearTemplate.cpp  ShearTemplate.gnu  ShearTemplate.txt  ShearTemplate1.txt  ShearTemplate1Reference.h5  ShearTemplateAniso.txt  ShearTemplateAnisoReference.h5  ShearTemplateReference.h5  Shrinking.cpp  Shrinking.txt  ThermalAccuracy.gnu  ThermoElastic.gnu  TopoBenchCase1.c  TopoBenchCase1.cpp  TopoBenchCase1.gnu  TopoBenchCase1.txt  (+25 more)
(+1397 files in other folders)
