cmake_minimum_required(VERSION 3.16)
project(MDOODZ C)
set(CMAKE_C_STANDARD 11)

option(OMP "Set this for using OpenMP" OFF)
option(OPT "Set this for using optimisation" OFF)
option(VALGRIND "Set this for enabling Valgrind for tests" OFF)

if(NOT DEFINED ${CC})
    set(CMAKE_C_COMPILER gcc)
    message("Setting a default compiler gcc")
else()
    set(CMAKE_C_COMPILER ${CC})
    message("Setting a custom compiler ${CC}")
endif()

if (OPT)
    message("Using optimization")
    set(CMAKE_C_FLAGS "-O3 -ftree-vectorize -funroll-loops")
else()
    message("Not using optimization")
    set(CMAKE_C_FLAGS "-g -Wall -O0 -fno-inline -fno-omit-frame-pointer")
endif()

include(Deps.cmake)
add_subdirectory(MDLIB)
add_subdirectory(SETS)
enable_testing()
add_subdirectory(TESTS)

